<resources>
    <string name="app_name">Video Player</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="testing_text">Lorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem Ipsum</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_videos">All Videos</string>
    <string name="all_folders">Folders</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="themes">Themes</string>
    <string name="sort_by">Sort By</string>
    <string name="feedback">Feedback</string>
    <string name="about">About</string>
    <string name="tagline">Your one and only media player</string>
    <string name="video_title">Video title</string>
    <string name="folder_name">Folder name</string>
    <string name="_00_00">00:00</string>
    <string name="total_videos">Total Videos</string>
    <string name="image">Thumbnail image</string>
    <string name="folder123">folder123</string>
    <string name="forward_slash">/</string>
    <string name="video_lock_close">Video lock close</string>
    <string name="vide_back">video back button</string>
    <string name="next_video_btn">Next video button</string>
    <string name="prev_video_btn">Previous video button</string>
    <string name="play_and_pause_button">Play and pause button</string>
    <string name="seek_forward">Seek Forward</string>
    <string name="seek_back">rewind</string>
<!--    For menu-->
    <string name="audio_track">Audio Track</string>
    <string name="subtitles">Subtitle</string>
    <string name="audio_booster">Booster</string>
    <string name="playback_speed">Speed</string>
    <string name="pip_mode">Pip</string>
    <string name="sleep_timer">Sleep timer</string>
    <string name="select_language">Select Language</string>

</resources>