<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="100dp"
        android:layout_height="70dp"
        tools:src="@tools:sample/avatars"/>

    <LinearLayout
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_weight="0.6"
        android:layout_height="70dp">

        <TextView
            android:id="@+id/video_title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/video_title"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/video_folder"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/folder_name"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/black"/>

    </LinearLayout>

    <TextView
        android:layout_weight="0.1"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:text="@string/_00_00"
        android:gravity="center"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_regular"/>

</LinearLayout>