<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view_group"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExoplayerActivity"
    android:background="@color/black">

    <com.google.android.exoplayer2.ui.PlayerView
        android:id="@+id/exo_player_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keepScreenOn="true"
        app:controller_layout_id="@layout/custom_exo_control_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >


    </com.google.android.exoplayer2.ui.PlayerView>

    <LinearLayout
        android:id="@+id/exo_top_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#42000000"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_video_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:clickable="true"
            android:contentDescription="@string/vide_back"
            android:focusable="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_video_back"
            app:tint="@color/white"/>

        <TextView
            android:id="@+id/tv_video_title"
            style="@style/customSubTitleStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/video_title"
            android:ellipsize="marquee"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="Title"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <ImageButton
            android:id="@+id/exo_more_features"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_video_menu"
            app:tint="@color/white" />

        <ImageButton
            android:id="@+id/exo_lock_open"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:clickable="true"
            android:visibility="visible"
            android:focusable="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_video_lock_open"
            app:tint="@color/white" />


    </LinearLayout>

    <ImageButton
        android:id="@+id/exo_lock_close"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="gone"
        android:src="@drawable/ic_video_lock_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/video_lock_close"
        android:focusable="true"
        android:clickable="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:tint="@color/white" />

    <RelativeLayout
        android:id="@+id/exo_volume_brightness_container"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="56dp"
        app:layout_constraintBottom_toTopOf="@+id/exo_media_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/exo_top_container" >


        <com.google.android.material.slider.Slider
            android:id="@+id/exo_brightness_slider"
            android:layout_width="150dp"
            android:layout_height="6dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:alpha="0"
            android:padding="20dp"
            android:rotation="270"
            android:translationX="-32dp"
            android:value="0.6"
            app:haloColor="@color/color_brightness_slider_track_inactive"
            app:thumbColor="@color/color_brightness_slider_thumb_color"
            app:trackColorActive="@color/color_brightness_slider_thumb_color"
            app:trackColorInactive="@color/color_brightness_slider_track_inactive"
            app:trackHeight="6dp"
            android:visibility="gone"/>

        <com.google.android.material.slider.Slider
            android:id="@+id/exo_volume_slider"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:alpha="0"
            android:padding="20dp"
            android:rotation="270"
            android:translationX="32dp"
            android:value="0.6"
            app:haloColor="@color/color_volume_slider_track_inactive"
            app:thumbColor="@color/color_volume_slider_thumb_color"
            app:trackColorActive="@color/color_volume_slider_thumb_color"
            app:trackColorInactive="@color/color_volume_slider_track_inactive"
            app:trackHeight="6dp" />

    </RelativeLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/exo_media_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/exo_bottom_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exo_top_container"
        app:layout_constraintVertical_bias="0.9">

        <ImageButton
            android:id="@+id/exo_prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/prev_video_btn"
            android:focusable="true"
            android:visibility="gone"
            android:src="@drawable/ic_exo_previous"
            app:tint="@color/white"
            app:layout_constraintTop_toTopOf="@id/exo_seek_backword"
            app:layout_constraintBottom_toBottomOf="@id/exo_seek_backword"
            app:layout_constraintEnd_toStartOf="@id/exo_seek_backword"/>

        <ImageButton
            android:id="@+id/exo_seek_backword"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            app:layout_constraintHorizontal_bias=".7"
            android:contentDescription="@string/seek_back"
            android:focusable="true"
            android:src="@drawable/ic_exo_icon_rewind"
            app:tint="@color/white"
            app:layout_constraintTop_toTopOf="@id/exo_play_pause"
            app:layout_constraintBottom_toBottomOf="@id/exo_play_pause"
            app:layout_constraintEnd_toStartOf="@id/exo_play_pause"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageButton
            android:id="@+id/exo_play_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/play_and_pause_button"
            app:srcCompat="@drawable/ic_exo_icon_play"
            app:tint="@color/white" />


        <ImageButton
            android:id="@+id/exo_seek_forward"
            style="@style/ExoMediaButton.FastForward"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            app:layout_constraintHorizontal_bias=".3"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/seek_forward"
            android:focusable="true"
            android:src="@drawable/ic_exo_icon_fastforward"
            app:tint="@color/white"
            app:layout_constraintTop_toTopOf="@id/exo_play_pause"
            app:layout_constraintBottom_toBottomOf="@id/exo_play_pause"
            app:layout_constraintStart_toEndOf="@id/exo_play_pause"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/exo_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/next_video_btn"
            android:focusable="true"
            android:visibility="gone"
            android:src="@drawable/ic_exo_next"
            app:tint="@color/white"
            app:layout_constraintTop_toTopOf="@id/exo_seek_forward"
            app:layout_constraintBottom_toBottomOf="@id/exo_seek_forward"
            app:layout_constraintStart_toEndOf="@id/exo_seek_forward"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <RelativeLayout
        android:id="@+id/exo_bottom_container"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/btn_full_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="12dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_exo_enter_fullscreen"
            app:tint="@color/white" />
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>